link to open in new tab or window

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ header {
 }
 
 .main-title{
+  font-size: 72px;
   text-shadow:
                 -2px -2px 0 #000,
                 2px -2px 0 #000,
